--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -13,7 +13,7 @@
 <table class="sortable table table-striped table-bordered table-condensed">
   <thead>
     <tr>
-      <th><%= sortable "id", "ID" %></th>
+      <th><%= sortable "user_name" %></th>
       <th><%= sortable "email" %></th>
       <th><%= sortable "created_at", "Signed up" %></th>
       <th><%= sortable "sign_in_count", "Times signed in" %></th>
@@ -26,7 +26,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr class="user">
-        <td><%= link_to(user.id, admin_user_path(user)) %></td>
+        <td><%= link_to(user.user_name, admin_user_path(user)) %></td>
         <td><%= link_to(user.email, admin_user_path(user)) %></td>
         <td><%= l( user.created_at, :format => :short) %></td>
         <td><%= user.sign_in_count %></td>
