--- a/app/views/layouts/admin/_main_nav.html.erb
+++ b/app/views/layouts/admin/_main_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#baseapp-navbar-collapse-1">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#eoffice-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -12,9 +12,10 @@
     </div>
 
 
-    <div class="collapse navbar-collapse" id="baseapp-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="eoffice-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to("Users", admin_users_path) %></li>
+        <li><%= link_to("Mail Classifications", admin_mail_classifications_path) %></li>
         <li><%= link_to("Exit →", root_path) %></li>
       </ul>
     </div>
