--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 
   <head>
 
-    <title>Base Application</title>
+    <title>E-Office</title>
 
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
