--- a/app/views/layouts/application/_header.html.erb
+++ b/app/views/layouts/application/_header.html.erb
@@ -1,18 +1,18 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#baseapp-navbar-collapse-1">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#eoffice-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
 
-      <%= link_to "Base Application", root_path, :class => "navbar-brand" %>
+      <%= link_to "E-Office", root_path, :class => "navbar-brand" %>
     </div>
 
 
-    <div class="collapse navbar-collapse" id="baseapp-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="eoffice-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
           <li><%= link_to "Account settings", edit_user_registration_path %></li>
@@ -21,9 +21,9 @@
           <% end %>
           <li><%= link_to "Sign out", destroy_user_session_path %></li>
         <% else %>
-          <li><%= link_to "Sign up", new_user_registration_path %></li>
+          <!-- <li><%= link_to "Sign up", new_user_registration_path %></li> -->
           <li><%= link_to "Sign in", new_user_session_path %></li>
-          <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
+          <!-- <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li> -->
         <% end -%>
       </ul>
     </div>
